// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Paragraph component aligned 1`] = `
.c0 {
  text-align: right;
  font-size: 1rem;
  line-height: 1.5rem;
}

<p
  className="c0"
  fontSize="medium"
>
  Hello
</p>
`;

exports[`A Paragraph component decorated 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

<p
  className="c0"
  fontSize="medium"
  textDecoration="line-through"
>
  Hello
</p>
`;

exports[`A Paragraph component resized 1`] = `
.c0 {
  font-size: 2.25rem;
  line-height: 2.75rem;
}

<p
  className="c0"
  fontSize="xxxxlarge"
>
  Hello
</p>
`;

exports[`A Paragraph component text transformed 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  text-transform: uppercase;
}

<p
  className="c0"
  fontSize="medium"
>
  Hello
</p>
`;

exports[`A Paragraph component truncated 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<p
  className="c0"
  fontSize="medium"
>
  Hello
</p>
`;

exports[`A Paragraph component weight 1`] = `
.c0 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
}

<p
  className="c0"
  fontSize="medium"
  fontWeight="bold"
>
  Hello
</p>
`;

exports[`A Paragraph component with multiline truncate 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-box-orient: vertical;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  overflow: hidden;
}

<p
  className="c0"
  fontSize="medium"
>
  Hello
</p>
`;

exports[`A Paragraph component with variant 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  color: #CC1F36;
}

<p
  className="c0"
  fontSize="medium"
>
  Hello
</p>
`;

exports[`A Paragraph component wrapped 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
  overflow-wrap: break-word;
}

<p
  className="c0"
  fontSize="medium"
>
  Hello
</p>
`;

exports[`A default Paragraph component 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1.5rem;
}

<p
  className="c0"
  fontSize="medium"
>
  Hello
</p>
`;
